whis-14 create movie card. fix jump link, opacity

--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,5 +1,5 @@
 .backdrop {
-  background-color: var(--grey);
+  background-color: var(--backdropGrey);
     display: flex;
     flex-direction: row-reverse;
     height: 100%;
